<resources>
    <string name="app_name">Clinigo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="prompt_username">Username</string>
    <string name="user_type">User Type</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="employee_role">Employee</string>
    <string name="patient_role">Patient</string>
    <string name="admin_role">Admin</string>
    <string name="admin_welcome_message">Welcome admin!</string>
    <string name="manage_services">Manage Services</string>
    <string name="prompt_service">Service</string>
    <string name="prompt_role">Role</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="empty_service_list">There are currently no services provided.</string>
    <string name="there_are_no_users_in_the_database">There are no users in the database.</string>
    <string name="name">Name</string>
    <string name="empty_user_list">There are currently no users.</string>
    <string name="press_on_search">Press on Search to display/update results.</string>
    <string name="delete_user_account">Are you sure you want to delete this user\'s account?</string>
    <string name="cancel">Cancel</string>
    <string name="manage_users">Manage Users</string>
    <string name="employee_welcome_message">Welcome Employee!</string>
    <string name="manage_working_hours">Working Hours</string>
    <string name="choose_clinic_services">Clinic Services</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="clinic_phone_number">Phone Number</string>
    <string name="prompt_clinic_name">Clinic Name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_street_name">Street Name</string>
    <string name="prompt_city">City</string>
    <string name="prompt_province">Province/State</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="delete_service">Are you sure you want to delete this service?</string>
    <string name="add_clinic_service">Are you sure you want to offer this service to your patients?</string>
    <string name="location">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="licensed">Licensed?</string>
    <string name="create_profile">Create Profile</string>
    <string name="edit_clinic_profile">Edit Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_welcome_message">Edit Profile</string>
    <string name="updated_profile_infromation">Save Changes</string>
    <string name="prompt_address">Address</string>
    <string name="update_clinic_information">SAVE</string>
    <string name="day">Day</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="monday">Monday</string>
    <string name="clinic_closed">--</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="closed">Closed</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="update_time">Update Time</string>
    <string name="edit_profile_info">Are you sure you want to update your clinic information?</string>
    <string name="empty_availability_list">There are currently no availabilities provided.</string>
    <string name="empty" />
    <string name="empty_services_selection">There are no more services to choose from.</string>
    <string name="empty_clinics_list">There are currently no clinics available.</string>
    <string name="patient_view_bookings">My Bookings</string>
    <string name="rate">Rate</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="prompt_comment">Enter your comment here...</string>
    <string name="submit">Submit</string>
    <string name="delete_booking_dialog_message">Are you sure you want to check-out from this booking?</string>
    <string name="average_wait_time">"Today's Average Wait Time:"</string>
    <string name="book">Book</string>
    <string name="check_in">Check-In</string>
    <string name="date">Date:</string>
    <string name="check_out">Check-out</string>
    <string name="no_upcoming_bookings">You currently have no upcoming bookings.</string>
    <string name="filter">Filter By</string>
    <string name="working_hours">Working Hours</string>
    <string name="service_type">Service Type</string>
    <string name="options">Options</string>
    <string name="availabilities">Availabilities</string>
    <string name="monday_hours">Monday:</string>
    <string name="tuesday_hours">Tuesday:</string>
    <string name="wednesday_hours">Wednesday:</string>
    <string name="thursday_hours">Thursday:</string>
    <string name="friday_hours">Friday:</string>
    <string name="saturday_hours">Saturday:</string>
    <string name="sunday_hours">Sunday:</string>
    <string-array name="countries">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Greece</item>
        <item>Morocco</item>
        <item>Italy</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Zambia</item>
    </string-array>
    <string-array name="daysOfTheWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="roles">
        <item>Doctor</item>
        <item>Nurse</item>
        <item>Staff</item>
    </string-array>
    />
    />
</resources>
