<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/rate"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:numStars="5" />

    <TextView
        android:id="@+id/text_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/leave_comment"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/prompt_comment"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_submit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/standard_buttons"
            android:foregroundGravity="center_horizontal"
            android:text="@string/submit"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/standard_buttons"
            android:text="@string/cancel"
            android:textColor="@color/colorText" />
    </LinearLayout>

</LinearLayout>