<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/prompt_service"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/prompt_role"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_update_service"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/standard_buttons"
            android:text="@string/update"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/button_delete_service"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/standard_buttons"
            android:text="@string/delete"
            android:textColor="@color/colorText" />

    </LinearLayout>


</LinearLayout>