<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_role2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_role"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_service"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/standard_buttons"
            android:text="@string/delete"
            android:textColor="@color/colorText" />

    </LinearLayout>

</LinearLayout>