<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activities.PatientMainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:text="@string/filter"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rb_group_sort_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbutton_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@android:dimen/notification_large_icon_height"
                android:onClick="checkSortBySelection"
                android:text="@string/prompt_address" />

            <RadioButton
                android:id="@+id/rbutton_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@android:dimen/notification_large_icon_height"
                android:onClick="checkSortBySelection"
                android:text="@string/prompt_city" />

            <RadioButton
                android:id="@+id/rbutton_working_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkSortBySelection"
                android:text="@string/working_hours" />

            <RadioButton
                android:id="@+id/rbutton_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkSortBySelection"
                android:text="@string/service_type" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontal_layout_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/options"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/standard_buttons"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="getSearchResults"
        android:text="@android:string/search_go"
        android:textColor="@color/colorText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/licensedTitle"
        tools:targetApi="o" />

    <ListView
        android:id="@+id/list_clinics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isScrollContainer="true"
        app:layout_constraintTop_toBottomOf="@id/search_button">

    </ListView>

    <TextView
        android:id="@+id/text_press_on_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_on_search"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        tools:visibility="invisible" />

</LinearLayout>