<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/login_banner"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:contentDescription="@string/title_activity_login"
            android:cropToPadding="false"
            android:src="@drawable/login" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="loginOnClick"
            android:text="@string/action_sign_in_short" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>