<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.AdminServicesActivity">

    <EditText
        android:id="@+id/edit_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_service"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_service"
        android:hint="@string/prompt_role"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_role"
        android:layout_centerInParent="true"
        android:background="@drawable/standard_buttons"
        android:text="@string/add"
        android:textColor="@color/colorText" />


    <ListView
        android:id="@+id/listViewServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add"
        android:layout_marginTop="3dp"></ListView>

</RelativeLayout>