<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/prompt_service"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/prompt_role"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/button_add_service"
        style="@android:style/Widget.DeviceDefault.Light.Button.Small"
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/standard_buttons"
        android:text="@string/add"
        android:textColor="@color/colorText" />


</LinearLayout>