<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/text_delete_booking_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/delete_booking_dialog_message"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_checkout_booking"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/standard_buttons"
            android:text="@string/check_out"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/button_cancel_noDelete"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/standard_buttons"
            android:text="@string/cancel"
            android:textColor="@color/colorText" />

    </LinearLayout>


</LinearLayout>